--- a/src/widget/components/graphs/line-graph/line-graph-table/line-graph-table.module.scss
+++ b/src/widget/components/graphs/line-graph/line-graph-table/line-graph-table.module.scss
@@ -1,4 +1,4 @@
-.line-graph-table, .line-graph-table * {
+.line-graph-table {
   position: absolute;
   width: 1px;
   height: 1px;
