--- a/src/widget/components/graphs/world-map/world-map-table/world-map-table.module.scss
+++ b/src/widget/components/graphs/world-map/world-map-table/world-map-table.module.scss
@@ -1,4 +1,4 @@
-.world-map-table, .world-map-table * {
+.world-map-table {
   position: absolute;
   width: 1px;
   height: 1px;
