--- a/src/widget/components/navigation/navigation.module.scss
+++ b/src/widget/components/navigation/navigation.module.scss
@@ -38,7 +38,7 @@
 .navigation-count {
   color: var(--color-primary, #506cd3);
   font-size: larger;
-  font-weight: 600;
+  font-weight: 700;
   margin-bottom: 0.3em;
 }
 
